<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund_polos"
    tools:context="bleizing.riva.fragment.DetailLukaFragment">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:clipToPadding="false"-->
        <!--android:fillViewport="true">-->


    <!--</ScrollView>-->

    <LinearLayout
        android:id="@+id/linear_diabetes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_foto_article"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="-22dp"
            android:layout_marginBottom="-15dp"
            android:src="@drawable/luka_diabetes_menghitam"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/tv_title_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_diabetes"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/hijau"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/tv_content_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_diabetes1"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_diabetes2"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isi_diabetes3"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_diabetes4"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
