<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund_polos"
    tools:context="bleizing.riva.fragment.KakiFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_foto_article"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/wound_care_0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <TextView
                        android:id="@+id/tv_title_article"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/judul_perawatan_kaki"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/hijau"
                        android:fontFamily="@font/montserrat"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TUJUAN"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat"/>

                    <TextView
                        android:id="@+id/tv_content_article"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/isi_perawatan_kaki1"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="CARA"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/isi_perawatan_kaki2"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="TIPS"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/isi_perawatan_kaki3"
                        android:textSize="10sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:fontFamily="@font/montserrat"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>