<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund_polos"
    tools:context="bleizing.riva.fragment.DetailArticleFragment">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical">-->

                <!--<ImageView-->
                    <!--android:id="@+id/img_foto_article"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="200dp" />-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="vertical"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_marginStart="20dp"-->
                    <!--android:layout_marginEnd="20dp">-->

                    <!--<TextView-->
                        <!--android:id="@+id/tv_title_article"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="JUDUL ARTICLE"-->
                        <!--android:textSize="14sp"-->
                        <!--android:textStyle="bold"-->
                        <!--android:textColor="@color/hijau"-->
                        <!--android:fontFamily="@font/montserrat"/>-->

                    <!--<TextView-->
                        <!--android:id="@+id/tv_content_article"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="10dp"-->
                        <!--android:text="ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLEISI ARTICLE ISI ARTICLE ISI ARTICLE ISI ARTICLE ISI"-->
                        <!--android:textSize="12sp"-->
                        <!--android:textColor="@color/colorPrimaryDark"-->
                        <!--android:fontFamily="@font/montserrat"/>-->

                <!--</LinearLayout>-->

            <!--</LinearLayout>-->

        <!--</LinearLayout>-->

    <!--</ScrollView>-->

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="50dp">-->

        <!--<Button-->
            <!--android:id="@+id/previous"-->
            <!--android:layout_width="35dp"-->
            <!--android:layout_height="35dp"-->
            <!--android:background="@color/biru_muda"-->
            <!--android:text="@string/previous"-->
            <!--android:textSize="20sp" />-->

        <!--<Button-->
            <!--android:id="@+id/next"-->
            <!--android:layout_width="35dp"-->
            <!--android:layout_height="35dp"-->
            <!--android:background="@color/biru_muda"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:text="@string/next"-->
            <!--android:textSize="20sp" />-->

    <!--</RelativeLayout>-->


    <LinearLayout
        android:id="@+id/linear_diabetes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_foto_article"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="-22dp"
            android:layout_marginBottom="-15dp"
            android:src="@drawable/luka_diabetes_menghitam"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/tv_title_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BERENANG UNTUK STABILKAN GULA DARAH"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/hijau"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/tv_content_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_diabetes1"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_diabetes2"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isi_diabetes3"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isi_diabetes4"
                android:textSize="10sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
